// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailCell renders correctly 1`] = `
.c0 {
  border: 0 !important;
}

<td
  class="MuiTableCell-root c0"
/>
`;

exports[`DetailRow renders correctly 1`] = `
.c0 {
  height: 24px !important;
}

<tr
  class="MuiTableRow-root c0"
/>
`;

exports[`Disclaimer renders correctly 1`] = `
.c0 {
  margin-bottom: 32px;
  padding: 16px;
}

<div
  class="c0"
/>
`;

exports[`MoreInfoBody renders correctly 1`] = `
.c0 {
  padding: 16px;
}

.c1 {
  margin-bottom: 32px;
  padding: 16px;
}

.c2 {
  height: 24px !important;
}

.c3 {
  border: 0 !important;
}

<div
  class="MuiGrid-root c0"
>
  <div
    class="c1"
  >
    <p
      class="MuiTypography-root MuiTypography-body1"
    >
      Application for this product will impact your credit score.
    </p>
  </div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-4"
  >
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6"
      >
        Highlight Points
      </h6>
      <table
        class="MuiTable-root"
      >
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Max LTV
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              85%
            </td>
          </tr>
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Initial Rate
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              1.49%
            </td>
          </tr>
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Subsequent Rate
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              2.75%
            </td>
          </tr>
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Fees
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              £1,495
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6"
      >
        Technical Points
      </h6>
      <table
        class="MuiTable-root"
      >
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Max LTV
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              85%
            </td>
          </tr>
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Initial Rate
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              1.49%
            </td>
          </tr>
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Subsequent Rate
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              2.75%
            </td>
          </tr>
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-head MuiTableCell-paddingNone"
            >
              Fees
            </td>
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-alignRight MuiTableCell-paddingNone"
            >
              £1,495
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-sm-6 MuiGrid-grid-lg-4"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6"
      >
        Point List
      </h6>
      <table
        class="MuiTable-root"
      >
        <tbody
          class="MuiTableBody-root"
        >
          <tr
            class="MuiTableRow-root c2"
          >
            <td
              class="MuiTableCell-root c3 MuiTableCell-body MuiTableCell-paddingNone"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 MuiTypography-paragraph"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit.
              </p>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Wrapper renders correctly 1`] = `
.c0 {
  padding: 16px;
}

<div
  class="MuiGrid-root c0"
/>
`;
